--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect ./index.js",
+    "start": "nodemon --inspect src/index.js",
+    "watch": "node-sass --watch  src/resources/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DT2K3/nodejs_blog.git"
@@ -27,6 +30,9 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "express-handlebars": "^5.1.0",
+    "morgan": "^1.10.0",
+    "node-sass": "^9.0.0",
     "nodemon": "^3.0.1"
   }
 }
