--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "beatiful": "prettier --sig",
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass --watch  src/resources/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DT2K3/nodejs_blog.git"
@@ -27,12 +26,16 @@
   },
   "homepage": "https://github.com/DT2K3/nodejs_blog#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0"
   },
   "devDependencies": {
     "express-handlebars": "^5.1.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
     "morgan": "^1.10.0",
     "node-sass": "^9.0.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3"
   }
 }
